[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scenes/game/player/player_controller.gd" type="Script" id=2]
[ext_resource path="res://scenes/game/player/player_movement.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 24.7386

[node name="PlayerAvatar" type="KinematicBody2D"]

[node name="PlayerController" type="Node" parent="."]
script = ExtResource( 2 )

[node name="PlayerMovement" type="Node" parent="."]
script = ExtResource( 3 )
move_time = 0.2

[node name="MoveTween" type="Tween" parent="PlayerMovement"]
playback_process_mode = 0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -26 )

[node name="Collision2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="movement_changed" from="PlayerController" to="PlayerMovement" method="update_movement_direction"]
